[gd_scene load_steps=5 format=3 uid="uid://dcry6qvppbvq5"]

[ext_resource type="Script" path="res://HostLobby.gd" id="1_73um5"]
[ext_resource type="Theme" uid="uid://fepdy1ebhxqh" path="res://Main Menu Theme.tres" id="1_y6uxt"]
[ext_resource type="Script" path="res://MainMenu.gd" id="2_tn3w8"]
[ext_resource type="Script" path="res://PeerLobby.gd" id="4_62jpe"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HostLobby" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_73um5")

[node name="Panel" type="Panel" parent="HostLobby"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.34
anchor_right = 0.75
anchor_bottom = 0.71
offset_top = 0.199997
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HostLobby/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.01
anchor_top = 0.01
anchor_right = 0.99
anchor_bottom = 0.99
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="FlowContainer" type="FlowContainer" parent="HostLobby/Panel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Start" type="Button" parent="HostLobby/Panel/VBoxContainer/FlowContainer"]
layout_mode = 2
text = "Start Game"

[node name="NameEdit" type="TextEdit" parent="HostLobby/Panel/VBoxContainer/FlowContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "HostTervis"
placeholder_text = "Player Name"
wrap_mode = 1
scroll_fit_content_height = true

[node name="Player Slider" type="HSlider" parent="HostLobby/Panel/VBoxContainer"]
layout_mode = 2
min_value = 2.0
max_value = 32.0
value = 2.0
allow_greater = true

[node name="Players" type="HFlowContainer" parent="HostLobby/Panel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HostLobby/Panel/VBoxContainer/Players"]
layout_mode = 2
text = "Max Players:"

[node name="PlayerCount" type="LineEdit" parent="HostLobby/Panel/VBoxContainer/Players"]
layout_mode = 2
text = "2"
max_length = 4
expand_to_text_length = true

[node name="Warning" type="Label" parent="HostLobby/Panel/VBoxContainer"]
visible = false
layout_mode = 2
text = "Warning: Player counts greater than 32 may cause lag and instability!"

[node name="Passwordbox" type="HBoxContainer" parent="HostLobby/Panel/VBoxContainer"]
layout_mode = 2

[node name="Password" type="LineEdit" parent="HostLobby/Panel/VBoxContainer/Passwordbox"]
layout_mode = 2
size_flags_horizontal = 3
secret = true

[node name="HidePassword" type="CheckBox" parent="HostLobby/Panel/VBoxContainer/Passwordbox"]
layout_mode = 2
button_pressed = true
text = "Hide Password"

[node name="HBoxContainer" type="HBoxContainer" parent="HostLobby/Panel/VBoxContainer"]
layout_mode = 2

[node name="PortOverride" type="CheckBox" parent="HostLobby/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Override Default Port"

[node name="Port" type="LineEdit" parent="HostLobby/Panel/VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2
placeholder_text = "9090"
expand_to_text_length = true

[node name="Cancel" type="Button" parent="HostLobby/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "Cancel"

[node name="MainMenu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="MainMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -256.5
offset_right = 256.5
offset_bottom = 86.0
grow_horizontal = 2
theme = ExtResource("1_y6uxt")
text = "Godot Survival"
uppercase = true

[node name="Menu" type="ItemList" parent="MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -177.5
offset_top = -186.5
offset_right = 177.5
offset_bottom = 186.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_y6uxt")
item_count = 6
item_0/text = "Singleplayer"
item_1/text = "Load"
item_2/text = "Host"
item_3/text = "Connect"
item_4/text = "Options"
item_5/text = "Quit"
script = ExtResource("2_tn3w8")

[node name="PeerLobby" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_62jpe")

[node name="Panel" type="Panel" parent="PeerLobby"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 2

[node name="Vbox" type="VBoxContainer" parent="PeerLobby/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.01
anchor_top = 0.01
anchor_right = 0.99
anchor_bottom = 0.99
grow_horizontal = 2
grow_vertical = 2

[node name="Serverlist" type="ItemList" parent="PeerLobby/Panel/Vbox"]
layout_mode = 2
size_flags_vertical = 3

[node name="Connection" type="HFlowContainer" parent="PeerLobby/Panel/Vbox"]
layout_mode = 2
size_flags_vertical = 8
size_flags_stretch_ratio = 0.0

[node name="NameEdit" type="TextEdit" parent="PeerLobby/Panel/Vbox/Connection"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "PeerTervis"
placeholder_text = "Player Name"
scroll_fit_content_height = true

[node name="IP" type="LineEdit" parent="PeerLobby/Panel/Vbox/Connection"]
layout_mode = 2
placeholder_text = "111.111.11.11"
expand_to_text_length = true

[node name="Port" type="LineEdit" parent="PeerLobby/Panel/Vbox/Connection"]
layout_mode = 2
text = "9090"
max_length = 5
expand_to_text_length = true

[node name="Join" type="Button" parent="PeerLobby/Panel/Vbox/Connection"]
layout_mode = 2
text = "Connect"

[node name="Cancel" type="Button" parent="PeerLobby/Panel/Vbox/Connection"]
layout_mode = 2
text = "Cancel"

[node name="LobbyLabel" type="Label" parent="PeerLobby/Panel/Vbox/Connection"]
visible = false
layout_mode = 2
text = "Waiting for host to start game...."

[connection signal="visibility_changed" from="HostLobby" to="HostLobby" method="_on_visibility_changed"]
[connection signal="pressed" from="HostLobby/Panel/VBoxContainer/FlowContainer/Start" to="HostLobby" method="_on_start_pressed"]
[connection signal="value_changed" from="HostLobby/Panel/VBoxContainer/Player Slider" to="HostLobby" method="_on_player_slider_value_changed"]
[connection signal="text_changed" from="HostLobby/Panel/VBoxContainer/Players/PlayerCount" to="HostLobby" method="_on_player_count_text_changed"]
[connection signal="toggled" from="HostLobby/Panel/VBoxContainer/Passwordbox/HidePassword" to="HostLobby" method="_on_hide_password_toggled"]
[connection signal="toggled" from="HostLobby/Panel/VBoxContainer/HBoxContainer/PortOverride" to="HostLobby" method="_on_port_override_toggled"]
[connection signal="pressed" from="HostLobby/Panel/VBoxContainer/Cancel" to="HostLobby" method="_on_cancel_pressed"]
[connection signal="item_activated" from="MainMenu/Menu" to="MainMenu/Menu" method="_on_item_activated"]
[connection signal="pressed" from="PeerLobby/Panel/Vbox/Connection/Join" to="PeerLobby" method="_on_join_pressed"]
[connection signal="pressed" from="PeerLobby/Panel/Vbox/Connection/Cancel" to="PeerLobby" method="_on_cancel_pressed"]
